--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@tanstack/react-table": "^8.20.5",
     "@uploadthing/react": "^7.0.2",
     "bcryptjs": "^2.4.3",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
@@ -48,6 +48,7 @@
     "mds-daraja-sdk": "^1.1.11",
     "mds-file-upload": "^1.0.1",
     "mongoose": "^8.7.0",
+    "motion": "^12.0.6",
     "next": "^14.2.13",
     "next-auth": "^4.24.8",
     "next-themes": "^0.4.3",
@@ -59,7 +60,7 @@
     "react-redux": "^9.1.2",
     "react-scroll": "^1.9.0",
     "recharts": "^2.13.3",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.0.2",
     "uuid": "^10.0.0",
