--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-redux": "^9.1.2",
     "react-scroll": "^1.9.0",
     "recharts": "^2.13.3",
+    "sweetalert2": "^11.16.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.0.2",
