--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.0.2",
     "uuid": "^10.0.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
