--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lucide-react": "^0.390.0",
     "mds-daraja-sdk": "^1.1.11",
     "mds-file-upload": "^1.0.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.7.0",
     "motion": "^12.0.6",
     "next": "^14.2.13",
@@ -54,6 +55,8 @@
     "next-themes": "^0.4.3",
     "nodemailer": "^6.9.15",
     "react": "^18",
+    "react-big-calendar": "^1.18.0",
+    "react-calendar": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
@@ -74,6 +77,7 @@
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^18",
     "@types/react-scroll": "^1.8.10",
     "@types/uuid": "^10.0.0",
