--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.390.0",
-    "mds-daraja-sdk": "^1.1.11",
+    "mds-daraja-sdk": "2.0",
     "mds-file-upload": "^1.0.1",
     "moment": "^2.30.1",
     "mongoose": "^8.7.0",
