--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
     "react-scroll": "^1.9.0",
     "recharts": "^2.13.3",
