--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@react-email/components": "^0.0.25",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-table": "^8.20.5",
+    "@types/jspdf": "^1.3.3",
     "@uploadthing/react": "^7.0.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -44,6 +45,8 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.11.17",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.390.0",
     "mds-daraja-sdk": "2.0",
     "mds-file-upload": "^1.0.1",
