--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "docx": "^9.5.1",
+    "exceljs": "^4.4.0",
     "framer-motion": "^11.11.17",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
@@ -78,7 +80,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20",
+    "@types/node": "^20.19.9",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-big-calendar": "^1.16.1",
