--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate:reports": "node scripts/generate_class_reports.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -61,6 +62,7 @@
     "next-auth": "^4.24.8",
     "next-themes": "^0.4.3",
     "nodemailer": "^6.9.15",
+    "pdfkit": "^0.13.0",
     "react": "^18",
     "react-big-calendar": "^1.18.0",
     "react-calendar": "^5.1.0",
